test fix problem with b/g not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@
 /* jumbotron */
 .jumbotron {
     background-image: url(/Images/jumbotron.jpg);
-    background-repeat: no-repeat;
     background-size: cover;
     height: 93vh;
 }
